[gd_scene load_steps=6 format=2]

[ext_resource path="res://elementos/imagem/ambiente/tenda.png" type="Texture" id=1]
[ext_resource path="res://recursos/jogo/ponto_de_entrega/ponto_de_entrega.gd" type="Script" id=2]
[ext_resource path="res://addons/controle_de_toque/controle_toque.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 209.239

[sub_resource type="CircleShape2D" id=2]

[node name="ponto_de_entrega" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -29 )
shape = SubResource( 1 )

[node name="ControleDeToque" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="BarraDeProgresso" type="ProgressBar" parent="."]
margin_left = -150.0
margin_top = 64.0
margin_right = 150.0
margin_bottom = 114.0
step = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="toque_realizado" from="ControleDeToque" to="." method="_on_ControleDeToque_toque_realizado"]
